--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -30,6 +30,7 @@ h1 {
 .btn {
   color: #fff;
   background-color: #86b835;
+  border: 10px solid #86b835;
   border: none;
   border-radius: 5px;
   padding: 0.5rem 1rem;
@@ -40,6 +41,7 @@ h1 {
 
 .btn:hover {
   background-color: transparent;
+  color: black;
 }
 
 p {
